--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 
 <button (click)="changeTitle()">Change</button>
 
-<app-product title="Este es el titulo"></app-product>
+<app-product [product] ="product" *ngFor="let product of products"></app-product>
