--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,3 +1,9 @@
-<h1>{{ product.title }}</h1>
-<p>$ {{ product.price }}</p>
-<img src={{ product.image }} alt="">
+<ng-container *ngIf="product">
+    <h2>{{ product.title }}</h2>
+    <p>$ {{ product.price }}</p>
+    <img [src]="product.images[0]" alt="">
+</ng-container>
+
+<ng-container *ngIf="!product">
+    producto no renderizado
+</ng-container>
